--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -257,7 +257,7 @@ Example: `appoint 1 ap/12/12/2020 15:12 60` +
 * If ap/ is left blank, the old appointment will be deleted.
 ****
 
-
+// tag::groupungroup[]
 === Grouping persons : `group`
 
 Since v1.2
@@ -304,7 +304,7 @@ Removes the 2nd and 3rd person from the group CS2103 in the address book.
 `ungroup gn/Family 1` +
 Removes the 1st person from the results of the `find` command from the group Family.
 
-
+// end::groupungroup[]
 === Listing entered commands : `history`
 
 Lists all the commands that you have entered in reverse chronological order. +
@@ -315,6 +315,7 @@ Format: `history` or `h`
 Pressing the kbd:[&uarr;] and kbd:[&darr;] arrows will display the previous and next input respectively in the command box.
 ====
 
+// tag::profilepic[]
 === Changing profile picture : `changepic` (alias pic)
 
 [NOTE]
@@ -331,6 +332,7 @@ Examples:
 
 * `pic 2 p/C:\Users\User\Documents\mypic.jpg`
 * `changepic 1 p/default_pic.png`
+// end::profilepic[]
 
 === Sending my contact detail to someone: `sharecontact`
 
