Added more test cases for FindCommandParserTest

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -385,6 +385,7 @@ image::UndoRedoActivityDiagram.png[width="200"]
 **Cons:** Requires dealing with commands that have already been undone: We must remember to skip these commands. Violates Single Responsibility Principle and Separation of Concerns as `HistoryManager` now needs to do two different things. +
 // end::undoredo[]
 
+// tag::findcommand[]
 === Enhancing FindCommand mechanism
 
 Before any enhancement, the `FindCommand` class can only search the Address Book by the names of the contacts.
@@ -397,7 +398,65 @@ In addition, six more classes were created for the rest of the parameters, e.g. 
 The `FindCommandParser` has to be updated to be able to accept all these new parameters. The user input would be separated into two variables using
 the regex: `"(?<commandWord>\\w/)(?<arguments>.*)"`. The `commandWord` refers to either `n/`, `p/`, `e/` etc. and the `arguments` refers to the rest
 of the user input. The `FindCommandParser` would use the `commandWord` and return the correct `Predicate`. If the user input is invalid, a `ParseException`
-would be thrown. The following sequence diagram shows an example when `find n/...` command is executed:
+would be thrown. The code snippet below shows the logic of `FindCommandParser`:
+
+[source,java]
+----
+public FindCommand parse(String args) throws ParseException {
+        String trimmedArgs = args.trim();
+        //@@author Affalen
+        /**
+         * Used for initial separation of command word and args.
+         */
+        final Pattern commandFormat = Pattern.compile("(?<commandWord>\\w/)(?<arguments>.*)");
+        final Matcher matcher = commandFormat.matcher(args.trim());
+        //@@author
+        if (trimmedArgs.isEmpty()) {
+            throw new ParseException(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+        }
+        //@@author Affalen
+        if (!matcher.matches()) {
+            throw new ParseException(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+        }
+
+        String commandWord = matcher.group("commandWord");
+        String arguments = matcher.group("arguments");
+
+        String[] keywords = arguments.split("\\s", 0);
+
+        switch(commandWord) {
+
+        case ("n/"):
+            return new FindCommand(new NameContainsKeywordsPredicate(Arrays.asList(keywords)));
+
+        case ("p/"):
+            return new FindCommand(new NumberContainsKeywordsPredicate(Arrays.asList(keywords)));
+
+        case ("e/"):
+            return new FindCommand(new EmailContainsKeywordsPredicate(Arrays.asList(keywords)));
+
+        case ("t/"):
+            return new FindCommand(new TagContainsKeywordsPredicate(Arrays.asList(keywords)));
+
+        case("a/"):
+            return new FindCommand(new AddressContainsKeywordsPredicate(Arrays.asList(keywords)));
+
+        case("r/"):
+            return new FindCommand(new RemarkContainsKeywordsPredicate(Arrays.asList(keywords)));
+
+        case("b/"):
+            return new FindCommand(new BirthdayContainsKeywordsPredicate(Arrays.asList(keywords)));
+
+        default:
+            throw new ParseException(
+                    String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+        }
+    }
+----
+
+The following sequence diagram shows an example when `find n/...` command is executed:
 
 image::FindCommandSequenceDiagram.png[width="800"]
 
@@ -410,8 +469,7 @@ image::FindCommandSequenceDiagram.png[width="800"]
 **Alternative 2:** Accept any type of user input after `find`. +
 **Pros:** More user-friendly as there are fewer requirements for user input. +
 **Cons:** Difficult to implement because it is tedious to distinguish the user input as several parameters are `String` parameters.
-
----
+// end::findcommand[]
 
 === Enhancing DeleteCommand mechanism
 
