--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -343,7 +343,7 @@ Unpins the person at index 1.
 // end::pinunpin[]
 
 // tag::delete[]
-=== Deleting person(s) : `delete`
+=== Delete person(s) : `delete`
 
 Deletes the specified person(s) from Bluebird's address book. +
 Format: `delete` `EXAMPLEINDEX1` `EXAMPLEINDEX2` `INDEX RANGE`
@@ -352,9 +352,11 @@ Examples:
 
 * `delete` `2` `3` `4~7` +
 Deletes the 2nd, 3rd and the 4th to 7th (*both inclusive*) person in Bluebird's address book.
+
 * `find` `Betsy` +
 `delete` `1` +
 Deletes the 1st person in the results of the `find` command.
+
 * `list` +
 `delete` `2~5` +
 Deletes 2nd to 5th person (*both inclusive*) in Bluebird's address book.
@@ -369,7 +371,6 @@ Deletes 2nd to 5th person (*both inclusive*) in Bluebird's address book.
 ****
 // end::delete[]
 
-
 // tag::select[]
 === Selecting a person : `select`
 
@@ -381,12 +382,13 @@ Examples:
 * `list` +
 `select` `2` +
 Selects the 2nd person in Bluebird's address book.
+
 * `find` `Betsy` +
 `select` `1` +
 Selects the 1st person in the results of the `find` command.
 
 ****
-* Selects the person and loads the Google search page the person at the specified `INDEX`.
+* Selects the person and expands person's contact card at the specified `INDEX`.
 * The index refers to the index number shown in the most recent listing.
 * The index *must be a positive integer* `1, 2, 3, ...`
 ****
@@ -430,11 +432,8 @@ The `undo` command here fails as there are no undoable commands executed previou
 
 * `delete` `1` +
 `clear` +
-`undo` +
-`undo` +
-The `undo` command entered right after `clear` reverses the `clear` command. +
-The next `undo` command reverts the `delete` `1` command, i.e. reverting the next Bluebird address book contact
-modifying command.
+`undo` (reverts the `clear` command) +
+`undo` (reverts the `delete` `1` command) +
 
 === Redoing the previously undone command : `redo`
 
@@ -461,18 +460,18 @@ The `redo` command fails as there are no `undo` commands executed previously.
 
 === Clearing all entries : `clear`
 
-Clears all entries from the address book. +
+Clears all entries from Bluebird's address book. +
 Format: `clear`
 
 === Exiting the program : `exit`
 
-Exits the program. +
+Exits the Bluebird application, we'll see you soon! +
 Format: `exit`
 
 === Saving the data
 
-Address book data are saved in the hard disk automatically after any command that changes the data. +
-There is no need to save manually.
+All data in Bluebird's address book is automatically saved in the hard disk, after any data modifying command. +
+There is no need to save manually. Yay!
 
 == Command Summary
 
