--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -214,7 +214,7 @@ The `Storage` component,
 
 This section describes some noteworthy details on how certain features are implemented.
 
-// 3.3tag::addPhoto[]
+// tag::addphoto[]
 === Adding a profile picture mechanism
 
 The `addphoto` feature is facilitated mainly by the `Logic` component where most of the process is executed.
@@ -223,9 +223,28 @@ The diagram below shows the inheritance diagram for commands:
 
 image::inheritCommandUML.png[width="800]
 
+AddPhotoCommand is undoable and is implemented this way:
+[source,java]
+----
+public class AddPhotoCommand extends UndoableCommand { 
+    @Override
+    public CommandResult executeUndoableCommand() throws CommandException {
+        // ... addphoto logic ...
+    }
+}
+----
+
 Suppose that the user wishes to append an image to a desired contact. The user will execute `addphoto 1 f/C:/Users/PhotoBook/myFace.png` to add a photo to the first person in Peersonal. Peersonal will parse the user input into their proper parameters in `AddPhotoCommandParser`.
-`AddPhotoCommandParser` will then return a `AddPhotoCommand` to be executed in the `LogicManager`. Upon the `execute()` method of `AddPhotoCommand`, a new `Person` object, `editedPerson` is created with all the same field as the `personToEdit` with the addition of the new `Photo` field. +
-`PhotoStorage` is then called to rewrite the filepath of the image to a local folder `displaypictures` and return the new filepath to be set in `Photo` class. An error message will be thrown if PEERSONAL is unable to write the new image to the `displaypictures` folder. The `editedPerson` will take the new filepath of the image instead of the local filepath from the user input. +
+`AddPhotoCommandParser` will then return a `AddPhotoCommand` to be executed in the `LogicManager`. Upon the `execute()` method of `AddPhotoCommand`, a new `Person` object, `editedPerson` is created with all the same field as the `personToEdit` with the addition of the new different `Photo` field as shown below:
+[source,java]
+----
+Person editedPerson = new Person(personToEdit.getName(), personToEdit.getPhone(), personToEdit.getEmail(),
+                personToEdit.getAddress(), personToEdit.getRemark(), personToEdit.getBirthday(),
+                personToEdit.getAge(), photo,
+                personToEdit.getTags());
+----
+
+`PhotoStorage` is then called to rewrite the filepath of the image to the local folder `displaypictures` and return the new filepath to be set in `Photo` class. An error message will be thrown if PEERSONAL is unable to write the new image to the `displaypictures` folder. The `editedPerson` will take the new filepath of the image instead of the local filepath from the user input. +
 The `editedPerson` will replace `personToEdit` using the `updatePerson()` in the `Model` class. A success message will be generated if the photo addition is successful. +
 The sequence diagram below shows how the `addphoto` process is carried out:
 
@@ -235,28 +254,32 @@ image::NewUML.png[width="800]
 
 **Aspect:** Implementation of AddPhotoCommand +
 **Alternative 1(current choice):** Have `AddPhotoCommand` implement `UndoableCommand` +
-**Pros:** We will retain the logic flow of how commands are executed. This option increases code reusability and retains the cohesion of each class. +
-**Cons:** Logic flow is embedded in multiple layers. New developers might find it hard to understand the complicated logic flow.
+**Pros:** Retains the logic flow of how commands are executed. This option increases code reusability of the UndoableCommand interface and retains the cohesion of each class. +
+**Cons:** Increases coupling between the AddPhotoCommand class and the UndoableCommand interface. In addition, logic flow is embedded in multiple layers. New developers might find it hard to understand the complicated logic flow. +
+**Alternative 2:** Have `AddPhotoCommand` implement `Command` + 
+**Pros:** Retains the logic flow of how commands are executed. This option increases code reusability of the Command interface and retains the cohesion of each class. +
+**Cons:** Increases coupling between the AddPhotoCommand class and the UndoableCommand interface. In addition, users will not have the convenient option to execute `undo` immediately if an incorrect photo is added.
 
 ---
 
-**Aspect:** Choice of how Image data type is obtained from filepath +
-**Alternative 1(current choice):** Using Image object to represent an photo of a contact. +
-**Pros:** Works well with JavaFx scenebuilder as Image class can be passed into ImageView class to load the image. +
-**Cons:** Might present a problem if our team chooses to use alternative GUI generators, Image class might not be applicable to generate an Image. +
-**Alternative 2:** Using a String to represent the filepath of the photo. +
-**Pros:** Do not have to go through multiple stages of conversion to represent the photo as an Image object. +
-**Cons:** Unable to pass String into ImageView class in Javafx to load an image. Therefore still have to convert into an Image object to pass through to ImageView class. Thus, using Image Object to represent a photo makes more sense.
+**Aspect:** Choice of data type to represent the added contact image in `Photo` class +
+**Alternative 1(current choice):** Using a String to represent the data or value of the image. +
+**Pros:** Works well with JavaFx SceneBuilder as `String` class can be passed into ImageView using `File` class to load the image.+
+**Cons:** Works in a very cumbersome way due to the two step conversion. +
+**Alternative 2:** Using Image to represent the data or value of the image. +
+**Pros:** Works well with JavaFx SceneBuilder as Image class can be passed into ImageView class to load the image using only a single step conversion process. +
+**Cons:** Might present a problem if our team chooses to use alternative GUI generators that does not utilise Javafx scripting language. Image class might not be applicable to generate an Image.
 
 ---
 
 **Aspect:** Choice of how the images are stored and accessed +
 **Alternative 1(current choice):** Creating a new folder `displaypictures` upon first execution of PEERSONAL.jar to use as an image storage folder. +
 **Pros:** Image filepaths are now independent of the source filepath. Therefore users do not have to worry about shifting the specific image that is tied to a specified contact in PEERSONAL. +
-**Cons:** `displaypictures` folder size might become too big if user adds too many photos. +
+**Cons:** Saving photos into `displaypictures` folder size may cause the folder to occupy unnecessary large memory space if user adds too many photos. +
 **Alternative 2:** Directly obtains the local filepath of the image on the user's hard drive without writing the image into a new image storage folder `displaypicture` for PEERSONAL. +
 **Pros:** Do not have deal with write issues to `displaypictures` and memory size of `displaypictures` if it gets too big. +
 **Cons:** Users might forget that a specific image file is tied to a contact in PEERSONAL. Shifting the image file will cause PEERSONAL to be unable to find the image file. +
+// end::addphoto[]
 
 // tag::undoredo[]
 === Undo/Redo mechanism
