--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -254,10 +254,10 @@ image::NewUML.png[width="800]
 
 **Aspect:** Implementation of AddPhotoCommand +
 **Alternative 1(current choice):** Have `AddPhotoCommand` implement `UndoableCommand` +
-**Pros:** Retains the logic flow of how commands are executed. This option increases code reusability of the UndoableCommand interface and retains the cohesion of each class. +
+**Pros:** Retains the logic flow of how commands are executed. This option increases code reusability of the UndoableCommand interface. +
 **Cons:** Increases coupling between the AddPhotoCommand class and the UndoableCommand interface. In addition, logic flow is embedded in multiple layers. New developers might find it hard to understand the complicated logic flow. +
 **Alternative 2:** Have `AddPhotoCommand` implement `Command` + 
-**Pros:** Retains the logic flow of how commands are executed. This option increases code reusability of the Command interface and retains the cohesion of each class. +
+**Pros:** Retains the logic flow of how commands are executed. This option increases code reusability of the Command interface. +
 **Cons:** Increases coupling between the AddPhotoCommand class and the UndoableCommand interface. In addition, users will not have the convenient option to execute `undo` immediately if an incorrect photo is added.
 
 ---
