--- a/docs/team/danielchew.adoc
+++ b/docs/team/danielchew.adoc
@@ -15,11 +15,8 @@ Customise the font size of the application.
 ==== External behavior
 
 ---
-#Start of Extract [from: User Guide]#
 
 include::../UserGuide.adoc[tag=customise]
-
-#End of Extract#
 
 ---
 
@@ -30,11 +27,8 @@ Global variable that records current fontSizeUnit so that every time a new resul
 ==== Implementation
 
 ---
-#Start of Extract [from: Developer Guide]#
 
 include::../DeveloperGuide.adoc[tag=customise]
-
-#End of Extract#
 
 ---
 
@@ -45,11 +39,8 @@ Change the theme of the application.
 ==== External behavior
 
 ---
-#Start of Extract [from: User Guide]#
 
 include::../UserGuide.adoc[tag=theme]
-
-#End of Extract#
 
 ---
 
@@ -60,11 +51,8 @@ Global variable that records current themeUnit so that every time a new result i
 ==== Implementation
 
 ---
-#Start of Extract [from: Developer Guide]#
 
 include::../DeveloperGuide.adoc[tag=theme]
-
-#End of Extract#
 
 ---
 
@@ -78,9 +66,5 @@ Feature to import/export external timetable and integrate with ModU.
 
 === Other contributions
 
-* Updated the GUI color scheme (Pull requests https://github.com[#33], https://github.com[#34])
-* Wrote additional tests to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
-
-== Project: PowerPointLabs
-
-{Optionally (not graded), you may include other projects in your portfolio.}
+* Updated the GUI theme (Pull request https://github.com/CS2103AUG2017-W13-B4/main/pull/129)
+* Change Model Module UI test cases (Pull request https://github.com/CS2103AUG2017-W13-B4/main/pull/105)
