--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -1,4 +1,4 @@
-= AddressBook Level 4 - User Guide
+= People.connect - User Guide
 :toc:
 :toc-title:
 :toc-placement: preamble
@@ -57,15 +57,16 @@ Format: `help`
 === Adding a person: `add`
 
 Adds a person to the address book +
-Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/BIRTHDAY pt/PHOTO [t/TAG]...`
+Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/BIRTHDAY [pt/PHOTO] [t/TAG]...`
 
 [TIP]
-A person can have any number of tags (including 0)
+A person can have any number of tags (including 0). A person also doesn't have to have a photo. If no photo is defined, the application uses automatically a default photo that can be updated with `edit` command.
 
 Examples:
 
 * `add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01 b/13/02/1998 pt/JohnDoe.jpg`
 * `add n/Betsy Crowe t/friend e/betsycrowe@example.com a/Newgate Prison p/1234567 b/08/08/2008 pt/BetsyC.png t/criminal`
+* `add n/Test Name t/colleague e/testname@example.com a/Test road p/323234 b/12/09/2010`
 
 === Listing all persons : `list`
 
@@ -277,7 +278,7 @@ There is no need to save manually.
 
 == Command Summary
 
-* *Add* `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/BIRTHDAY [t/TAG]...` +
+* *Add* `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS b/BIRTHDAY [pt/PHOTO] [t/TAG]...` +
 e.g. `add n/James Ho p/22224444 e/jamesho@example.com a/123, Clementi Rd, 1234665 b/13/12/1980 t/friend t/colleague`
 * *Clear* : `clear`
 * *Delete* : `delete INDEX` +
